examples/test/testpolicy11436.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11436
  namespace: namespace293
spec:
  podSelector:
    matchLabels:
      key23: value15
      key13: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key31: value16
          key35: value13
      podSelector:
        matchLabels:
          key37: value29
          key11: value39
